Fix collapsing menu

--- a/components/skeleton/Header.module.css
+++ b/components/skeleton/Header.module.css
@@ -7,6 +7,12 @@
   justify-content: space-between;
 }
 
+.menu {
+  width: 400px;
+  display: flex;
+  justify-content: flex-end;
+}
+
 .brand {
   color: white;
   font-size: 24px;
